test/arrays/diten/array-as-vec-bounds-checking.0-3.good
array-as-vec-bounds-checking.chpl:18: error: halt reached - insert at position 7 out of bounds
